Fix vertical alignment of sidebar toolbar icons for WebKit browsers. Cleanup up variables.

--- a/src/stylesheets/components/viewer/_toolbar-sidebar.scss
+++ b/src/stylesheets/components/viewer/_toolbar-sidebar.scss
@@ -93,14 +93,6 @@
       &::before {
         position: relative;
         z-index: 1;
-
-        @include retina {
-          transform: translateY(0.5px);
-
-          @-moz-document url-prefix() {
-            transform: none;
-          }
-        }
       }
 
       // Label for screen readers
